# harnessBench

./: .gitignore  README.md  pyproject.toml  suite.yaml
docker/: Dockerfile.base  entrypoint.sh
docs/specs/: no-key-claude-degrade.md
harnessbench/: __init__.py  cli.py  config.py  docker_run.py  proxy_manager.py  report.py  runner.py  scoring.py  tasks.py  telemetry.py
harnessbench/adapters/: __init__.py  base.py  bob.py  claude.py  codex.py  cursor.py  opencode.py  pi.py
proxy/: __init__.py  litellm_config.yaml  usage_logger.py
tasks/browser-scrape-price/: task.yaml
tasks/browser-scrape-price/reference/: sale_report.json  scrape.mjs
tasks/browser-scrape-price/tests/: run.sh
tasks/browser-scrape-price/workspace/site/: index.html
tasks/context-fill-ledger-audit/: README.md  gen.py  task.yaml
tasks/context-fill-ledger-audit/reference/: balances.json
tasks/context-fill-ledger-audit/tests/: run.sh
tasks/context-fill-ledger-audit/workspace/modules/: mod_000.txt  mod_001.txt  mod_002.txt  mod_003.txt  mod_004.txt  mod_005.txt  mod_006.txt  mod_007.txt  mod_008.txt  mod_009.txt  mod_010.txt  mod_011.txt  mod_012.txt  mod_013.txt  mod_014.txt  mod_015.txt  mod_016.txt  mod_017.txt  mod_018.txt  (+381 more)
tasks/mcp-secret-retrieval/: task.yaml
tasks/mcp-secret-retrieval/reference/: RELEASE_TOKEN.txt
tasks/mcp-secret-retrieval/tests/: run.sh
tasks/react-cart-total-bug/: task.yaml
tasks/react-cart-total-bug/reference/: Cart.jsx
tasks/react-cart-total-bug/tests/: hidden.test.jsx  run.sh
tasks/react-cart-total-bug/workspace/: package.json  vite.config.js
(+3 files in other folders)
