[project]
name = "harnessbench"
version = "0.1.0"
description = "Benchmark coding-agent harnesses (tokens, speed, compaction) with a server-pinned model+thinking budget."
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pydantic>=2.6",
    "httpx>=0.27",
    "jinja2>=3.1",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
proxy = [
    "litellm[proxy]>=1.44",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
harnessbench = "harnessbench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harnessbench"]

[tool.ruff]
line-length = 100
target-version = "py310"
